scripts/compilation/nullgtn/url1a41b8e9f2_mr1azl_INF345_tgz-pJ8-TestParserJ8.txt
../nullgtn/url1a41b8e9f2_mr1azl_INF345_tgz-pJ8-TestParserJ8/src/xx/EG1.java:1: error: class, interface, or enum expected
???
^
1 error
